--- a/cbench/CHANGES
+++ b/cbench/CHANGES
@@ -2,7 +2,7 @@
         
 A __brief__ summary of changes in each release of Cbench.
 
-* upcoming Cbench release
+* upcoming Cbench release (1.1.5)
 	* fix a bug with the HPL/HPCC N parameter calulation when using > 1ppn
 	* make the default hpcc input deck match that of linpack
 	* Marcus Epperson added the mpiGraph benchmark, by Adam Moody of LLNL,
