--- a/cbench/CHANGES
+++ b/cbench/CHANGES
@@ -81,7 +81,7 @@ A __brief__ summary of changes in each release of Cbench.
 	* Added the $walltime_method setting in cluster.def and a new way to deal with
 	  the walltimes associated with batch jobs. Walltimes can now be generated in a
 	  stepped fashion.
-    * Support for Msub batch submissions
+    * Support for Moab Msub batch submissions
 	* Significant performance improvements in the cbench_output_parse.pl
 	  --customparse option courtesy of mr_ep
 	* ticket #7  HPCC source code tweaks
