--- a/doc/INSTALL
+++ b/doc/INSTALL
@@ -1,5 +1,9 @@
 = Compiling and Installing Cbench =
-[[TOC]]
+
+
+
+[wiki:doc/CbenchDocumentation Back to Cbench Documentation]
+
 == Compiling and Installing the core of Cbench ==
 
 Cbench requires the following environment variables be set:
@@ -20,7 +24,7 @@ must be set correclty for HPLinpack (xhpl) and other utilities that link with
 external BLAS libraries to compile correctly.  There is currently a BLASLIB variable
 for each machine architecture and compiler collection combination.
 
-There is a  sample Cbench module file you can place in your modulefiles directory.
+There is a sample Cbench module file you can place in your modulefiles directory.
 There is also a simple bash and tcsh style script here as well.
 
 Once you have your environment setup and make.def setup, the cluster config file,
@@ -28,17 +32,23 @@ cluster.def, for the cluster you want to test needs to be edited.  All the
 parameters in cluster.def should be commented.
 
 Then make and install the standard collection of tests:
- * make install
+ {{{
+make install
+ }}}
 
 This compiles and installs the standard collection of test binaries in $CBENCHOME/bin.
 
 == Installing Supported Cbench Test Sets ==
 
 Compile Cbench as described above.  Install the Cbench test set tree:
- * make installtests
+ {{{
+make installtests
+ }}}
 
-This will install all test sets that are currently packaged in Cbench into the tree specified by the CBENCHTEST environment variable:
- * e.g. export CBENCHTEST=/scratch3/user/cbench-test
+This will install all test sets that are currently packaged in Cbench into the tree specified by the CBENCHTEST environment variable: 
+ {{{
+export CBENCHTEST=/scratch3/user/cbench-test
+ }}}
 
 == Compiling non-default parts of Cbench ==
 Some code within Cbench is not compiled by default.  HPC Challenge and NAS Parallel Benchmarks are two primary ones.  HPCC eventually will compile by default after the Cbench build system is upgraded to something a little smarter.  This is because HPCC can be built two ways in Cbench:
@@ -49,29 +59,45 @@ The NAS Parallel Benchmarks has to build a binary for every single combination o
 
 === Building HPCC with the system MPI ===
 From the top-level of the Cbench source tree:
- * make -C opensource/hpcc distclean
- * make -C opensource/hpcc
- * make -C opensource/hpcc install
- * make itests   (to update the CBENCTEST tree)
+ {{{
+make -C opensource/hpcc distclean
+make -C opensource/hpcc
+make -C opensource/hpcc install
+make itests   (to update the CBENCTEST tree)
+ }}}
 
 === Building NPB ===
 From the top-level of the Cbench source tree:
- * make -C opensource/NPB
+ {{{
+make -C opensource/NPB
+ }}}
 OR to limit the size of the build even further than what is in cluster.def (i.e. your cluster has 4096 nodes but you only want to be able run NPB jobs up to 512 nodes)
- * make MAXPROCS=512 -C opensource/NPB
+ {{{
+make MAXPROCS=512 -C opensource/NPB
+ }}}
 
 To make sure your NPB binaries get updated in the CBENCHTEST tree, from the top-level of the Cbench tree run :
- * sbin/install_cbenchtest --testset npb
+ {{{
+sbin/install_cbenchtest --testset npb
+ }}}
 
 === Building the self-contained MPICH for Cbench ===
- * make -C opensource/mpich
+ {{{
+make -C opensource/mpich
+make -C opensource/mpich install
+ }}}
 
 === Building only what is required for node-level hardware testing ===
- * make nodehwtest
+ {{{
+make nodehwtest
+make itests
+ }}}
+NOTE: This builds the Cbench standalone MPICH to support running MPI tests on a single node.
 
 === Building HPCC with the Cbench MPICH ===
- * make -C opensource/hpcc distclean
- * make -C opensource/hpcc local
- * make -C opensource/hpcc install
- * make itests   (to update the CBENCTEST tree)
-
+ {{{
+make -C opensource/hpcc distclean
+make -C opensource/hpcc local
+make -C opensource/hpcc install
+make itests   (to update the CBENCTEST tree)
+ }}}
