--- a/cbench/opensource/iozone/src/current/Changes.txt
+++ b/cbench/opensource/iozone/src/current/Changes.txt
@@ -2020,4 +2020,189 @@ Bug fix for -k used in conjunction with -t and content validation.
 Revision 3.263
 =============================================================================
 Bug fix for -k used in conjunction with -t and content validation.
-
+=============================================================================
+Revision 3.264
+=============================================================================
+Add DragonFly target.
+=============================================================================
+Revision 3.265
+=============================================================================
+Put PER_VECTOR_OFFSET in for HP-UX
+=============================================================================
+Revision 3.266
+=============================================================================
+Fix compiler warning messages
+=============================================================================
+Revision 3.267
+=============================================================================
+Enforce minimum file size of page_size
+=============================================================================
+Revision 3.268
+=============================================================================
+Minor fixes.
+=============================================================================
+Revision 3.269
+=============================================================================
+Check fsync and close for errors.
+=============================================================================
+Revision 3.270
+=============================================================================
+Adding support for testing block devices. Will be done is phases. This is 
+phase 1. (Single threaded mode only)
+=============================================================================
+Revision 3.271
+=============================================================================
+Adding 4 token support to client_list. Each entry may now contain 4 tokens
+and the new one is the absolute path to the temp file for testing.
+=============================================================================
+Revision 3.272
+Editorial change.
+=============================================================================
+Revision 3.273
+Add support for external monitor start & stop for throughput tests.
+IMON_START and IMON_STOP environmental variables used.
+=============================================================================
+Revision 3.274
+=============================================================================
+minor change.
+=============================================================================
+Revision 3.275
+Bug fix for systems without O_DIRECT. Fall through in switch statement.
+=============================================================================
+Revision 3.276
+Fix for -c -t over NFS and initial writer close() when told by another to stop
+=============================================================================
+Revision 3.277
+Add Benny Halevy to contributors list.
+=============================================================================
+Revision 3.278
+Fix for Cygwin environment.
+=============================================================================
+Revision 3.279
+Code cleanup, and add arg to external trigger.
+=============================================================================
+Revision 3.280
+Code fixes for macosx
+=============================================================================
+=============================================================================
+Revision 3.281
+Add support for building with Sun's Studio 11 compiler
+=============================================================================
+Revision 3.283
+Bug fix for fread/fwrite with > 2Gig files.
+=============================================================================
+Revision 3.287
+Add O_DIRECT for Windows
+=============================================================================
+Revision 3.288
+Add -+w dedup testing mode.
+=============================================================================
+Revision 3.289
+Make remaining non-dedup data unique.
+=============================================================================
+Revision 3.290
+Make non-dedupable more unique.
+=============================================================================
+Revision 3.291
+Bug fix for non-dedup.
+=============================================================================
+Revision 3.292
+Make random offsets unique, using Knuth shuffle.
+=============================================================================
+Revision 3.292
+free memory used for random offset uniqueness.
+=============================================================================
+Revision 3.294
+Make unique/random offsets 64bits.
+=============================================================================
+Revision 3.295
+Add fallback for random/unique.
+=============================================================================
+Revision 3.296
+Make non-dedup region more unique
+=============================================================================
+Revision 3.297
+Add -+y ## to set percentage of interior dedup.
+=============================================================================
+Revision 3.298
+Add -+y ## to set percentage of interior dedup.
+=============================================================================
+Revision 3.299
+Bug fixes for -+w and -+y
+=============================================================================
+Revision 3.300
+Minor fix for dedup
+=============================================================================
+Revision 3.302
+Adding -+C to set percent of dedupable within a file.
+=============================================================================
+Revision 3.303
+bug fix
+=============================================================================
+Revision 3.304
+Add solaris to read sync O_RSYNC
+=============================================================================
+Revision 3.305
+Add space to avoid field output touching each other.
+=============================================================================
+Revision 3.306
+Add check for config file exceeding MAXSTREAMS.
+=============================================================================
+Revision 3.307
+Add new contributor's name.
+=============================================================================
+Revision 3.308
+Fix type-oh
+=============================================================================
+Revision 3.309
+Bug fix. rewrite_rec needed to fill entire buffer, or later stride read will
+fail.
+=============================================================================
+Revision 3.310
+=============================================================================
+Add ability for remote clients to return errors to the master and
+have the master display on output.
+=============================================================================
+Revision 3.311
+=============================================================================
+fix double reporting of client errors 
+=============================================================================
+Revision 3.312
+=============================================================================
+Eliminate extra file descriptor in fwrite test.
+=============================================================================
+Revision 3.312
+=============================================================================
+bug fix for barray allocation in -T mode
+=============================================================================
+Revision 3.313
+Revision 3.314
+Revision 3.315
+=============================================================================
+Changes from Debian: Retry umount, add fileop for linux-sparc, and
+fix column width in fileop for faster boxes.
+=============================================================================
+Revision 3.316
+Add O_DIRECT support to FreeBSD
+=============================================================================
+Revision 3.317
+Fix for defines in FreeBSD
+=============================================================================
+Revision 3.318
+Add IMON_SYNC to enable monitor scripts to be run sync.
+=============================================================================
+Revision 3.319
+Add directio() for Solaris
+=============================================================================
+Revision 3.320
+Add fixes for unresolved references in directio() for Solaris
+=============================================================================
+Revision 3.321
+Fix type oh.
+=============================================================================
+Revision 3.322
+Fix c++ style comment back to 'C' style comment.
+=============================================================================
+Revision 3.323
+Bug fix for check_filenames and large files
+=============================================================================
